[package]
name = "sql-builder"
version = "1.1.1"
description = "Simple SQL code generator."
authors = ["perdumonocle <konstantin_1987@mail.ru>", "dvic <info@dvic.io>"]
license = "MIT"
edition = "2018"
keywords = ["sql", "db", "database", "simple", "codegen"]
categories = ["database", "text-processing"]
repository = "https://github.com/perdumonocle/sql-builder.git"
readme = "README.md"

[badges]
travis-ci = { repository = "perdumonocle/sql-builder" }

[dependencies]
