[package]
name = "sql-builder"
version = "4.0.0"
description = "Simple SQL code generator."
authors = ["perdumonocle <konstantin_1987@mail.ru>", "dvic <info@dvic.io>", "ezracelli", "ljoonal <toasterbot@ljoonal.xyz>"]
license = "MIT"
edition = "2018"
keywords = ["sql", "db", "database", "simple", "codegen"]
categories = ["database", "text-processing"]
repository = "https://github.com/perdumonocle/sql-builder.git"
readme = "README.md"

[badges]
travis-ci = { repository = "perdumonocle/sql-builder" }

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
